[package]
name = "cattleya"
version = "0.1.0"
edition = "2024"

[lib]
name = "cattleya"
path = "src/lib.rs"

[dependencies]
aes-stream = "0.2.1"
memmap2 = "0.9.4"
regex = "1.12.2"
rust-crypto = "0.2.36"
sha2 = "0.10.8"
thiserror = "2.0.0"

[dev-dependencies]
bytemuck = "1.24.0"
goblin = { version = "0.10.3", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
